--- a/public/views/trips.html
+++ b/public/views/trips.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chuyến đi - DC Car Booking</title>
+    <title>Chuyến đi - DC Booking</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
             <a class="navbar-brand" href="../index.html">
-                <i class="fas fa-car me-2"></i>DC Car Booking
+                <i class="fas fa-car me-2"></i>DC Booking
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -34,6 +34,9 @@
                     </li>
                     <li class="nav-item" id="promos-nav">
                         <a class="nav-link" href="promotions.html">Khuyến mãi</a>
+                    </li>
+                    <li class="nav-item d-none" id="driver-stats-nav">
+                        <a class="nav-link" href="driver-dashboard.html">Thống kê</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
@@ -195,6 +198,7 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/notifications.js"></script>
     <script src="../js/app.js"></script>
     <script>
         let currentPage = 1;
